# file-server

./: .env.example  .env.example.docker  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: app-testing.yml
app/: __init__.py  __main__.py
app/config/: default.py
app/db/connection/: session.py
app/db/models/: __init__.py  base.py  file.py  user.py
app/endpoints/: __init__.py  auth.py  file.py  health_check.py
app/schemas/: __init__.py
app/schemas/auth/: registration.py  user.py
app/schemas/file/: file.py
app/utils/file/: __init__.py  enum.py
app/utils/file/business_logic/: create_dir.py  save_file.py
app/utils/file/database/: create.py  get.py
app/utils/health_check/: database.py
app/utils/user/: business_logic.py
migrator/: env.py
migrator/versions/: 2023-08-29_56d2966feb39_user.py  2023-08-29_e554171f371f_file.py
tests/: conftest.py  utils.py
tests/fixtures/: postgres.py  user.py
tests/test_handlers/: test_health_check.py
tests/test_handlers/test_user/: test_authentication.py  test_get_me.py  test_registration.py  test_takeout.py
tests/test_migrations/: test_stairway.py
tests/utils/: alembic_config.py  user_factory.py
